2015-01-14 Andre Heinecke <aheinecke@greenbone.net>

	* winexe/CMakeLists.txt, wmi/CMakeLists.txt:
	Include internal popt directory.

2015-01-14 Andre Heinecke <aheinecke@greenbone.net>

	* samba/heimdal/lib/des/hcrypto: Remove symlink
	* samba/heimdal/lib/des/dh.h,
	samba/heimdal/lib/des/dsa.h,
	samba/heimdal/lib/des/engine.h,
	samba/heimdal/lib/des/evp.h,
	samba/heimdal/lib/des/hcrypto,
	samba/heimdal/lib/des/hmac.h,
	samba/heimdal/lib/des/pkcs12.h,
	samba/heimdal/lib/des/rand.h,
	samba/heimdal/lib/des/rsa.h: Fix includes not to need hcyrpto dir.

2015-01-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* winexe/CMakeLists.txt: Use SEND_ERROR instead of FATAL_ERROR for
	consistency.

2015-01-14  Michael Wiegand <michael.wiegand@greenbone.net>

	* README: Fix typo.

2015-01-14  Michael Wiegand <michael.wiegand@greenbone.net>

	Initial commit of openvas-smb module code, prepared by Andre Heinecke
	and Jan-Oliver Wagner. Starting ChangeLog.
