@@ -40,7 +40,6 @@
 #include "system/dir.h"
 #include "system/filesys.h"
 #include "lib/util/dlinklist.h"
-#include "system/readline.h"
 #include "auth/credentials/credentials.h"
 #include "auth/gensec/gensec.h"
 #include "system/time.h"
